[package]
name = "uint-convertor"
version = "0.1.0"
authors = ["Linfeng Qian <thewawar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numext-fixed-uint = "0.1.6"
num-bigint = "0.3.1"
hex = "0.4.2"

[dependencies.clap]
version = "2.33.3"
default-features = false
features = [ "suggestions", "color" ]